# synphony-backend

./: .gitignore  README.md  TODO  archeticture.drawio  items.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/products/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  product.py
items/: views.py
users/: crud.py  schemas.py  views.py
